navbar collapse hover:after fixed

--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,11 @@ a.navbar-brand {
 	-webkit-transition: all .2s;
 }
 .nav > li > a:hover,
-.nav > li > a:active {
+.nav > li > a:active,
+.nav > li > a:focus {
 	color: #c41654;
+	background-color: inherit;
+	outline: none;
 }
 .nav > li > a:active:after,
 .nav > li > a:hover:after {
@@ -113,10 +116,12 @@ a.navbar-brand {
 	border-radius: 50%;
 	background-color: #c41654;
 }
-.nav > li > a:hover,
-.nav > li > a:focus {
-	background-color: inherit;
-	outline: none;
+
+/*--- navbar-collapse IN ---*/
+
+.navbar-collapse.in .nav > li > a:active:after,
+.navbar-collapse.in .nav > li > a:hover:after {
+	content: none;
 }
 
 /* last child tip
